grammar.txt
EXPRESSION =
    EXPRESSION_AS

EXPRESSION_AS =
    [EXPRESSION_MD ["+" | "-]]* EXPRESSION_MD
    | EXPRESSION_MD

EXPRESSION_MD =
    [EXPRESSION_BASE ["*" | "-"]]* EXPRESSION_BASE
    | EXPRESSION_BASE

EXPRESSION_BASE =
    | "(" EXPRESSION ")"
    | STRING_LITERAL
    | NUMBER_LITERAL    
    | VARIABLE
    
STATEMENT =
    "let" VARIABLE "=" EXPRESSION ";"
    | EXPRESSION ";"
